--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "2.14.12"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.12.17",
     "@nuxtjs/vuetify": "^1.11.3"
   }
 }
