--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,4 +17,14 @@ collections:
       - {label: "Tech Stack", name: "stack", widget: "string"}
       - {label: "Code", name: "code", widget: "string"}
       - {label: "Live", name: "live", widget: "string"}
-      - {label: "Featured", name: "featured", widget: "boolean"}
+      - {label: "Featured", name: "featured", widget: "boolean", default: "false"}
+  
+  - name: "blog"
+    label: "Blog"
+    folder: "content/blogs"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Banner", name: "banner", widget: "image"}
+      - {label: "Content", name: "content", widget: "markdown"}
