--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,4 +27,4 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Banner", name: "banner", widget: "image"}
-      - {label: "Content", name: "content", widget: "markdown"}
+      - {label: "Content", name: "body", widget: "markdown"}
