--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,4 +27,5 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Banner", name: "banner", widget: "image"}
+      - {lable: "Banner Source Link", name: "banner_source", widget: "string"}
       - {label: "Content", name: "body", widget: "markdown"}
