--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "2.14.12"
   },
   "devDependencies": {
-    "@babel/preset-env": "7.12.17"
+    "@babel/preset-env": "7.12.17",
+    "@nuxtjs/google-analytics": "^2.4.0"
   }
 }
